--- a/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/Widget-AIChat.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.AI.Chat/Views/Widget-AIChat.cshtml
@@ -170,17 +170,14 @@
                         <div>
                             <i :class="message.role === 'user' ? 'fa-solid fa-user fa-2xl text-primary' : 'fa fa-robot fa-2xl text-success'"></i>
                         </div>
-                        <div class="text-end">
-                            <div class="message-buttons-container pe-2" v-if="!isIndicator(message)">
-                                <div class="ms-2 button-message-toolbox" @@click="copyResponse(message.content)" title="@T["Click here to copy response to clipboard."]">
-                                    <i class="fa-solid fa-copy fa-lg text-secondary"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="py-2 px-1 lh-base">
                         <h4 v-if="message.title">{{ message.title }}</h4>
                         <div v-html="message.htmlContent || message.content"></div>
+                        <span class="message-buttons-container" v-if="!isIndicator(message)">
+                            <span class="ms-2 button-message-toolbox" @@click="copyResponse(message.content)" title="@T["Click here to copy response to clipboard."]">
+                                <i class="fa-solid fa-copy text-secondary"></i>
+                            </span>
+                        </span>
                     </div>
                 </div>
 
